--- a/index.html
+++ b/index.html
@@ -65,4 +65,4 @@
             <label for="subject"></label>
             <textarea name="" id="message" placeholder="Votre message"></textarea>
 
-            <input type="submit" value="Envoyer"
+            <input type="submit" value="Envoyer">
